--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,38 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poller+One&display=swap');
+
+
 body{
-    background-color: white;
+    background-image: linear-gradient(to right top, #005fec, #874dd9, #ba35bd, #da1b9c, #eb127a);
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    height: 100vh;
+    
 }
 
 .numpad{
     background-color: black;
     width: 30.5em;
+    max-width: 30.5em;
     height: 30em;
+    border-radius: 1em;
     display: grid;
     grid-template-columns:repeat(3,10em);
     
+    
+}
+.calc{
+    border:solid 1em rgb(255, 255, 255);
+    border-radius: 1em;
+    background-color: white;
+}
+.tit{
+    font-size: 2em;
+    color:rgb(243, 243, 243);
+    font-weight: bolder;
+    font-family: "Poller One", serif;
 }
 .zero{
     
